fixing broken images

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 
 /* Main Content styling */
 body {
-    background-image: url("/images/5-dots.png");
+    background-image: url("images\5-dots.png");
 }
 
 .main-content {
